// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Overlay Dark 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="Text-sc-15glbbx-0 gSNEe"
      color="currentColor"
      font-size="medium"
    >
      Background content
    </p>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 Overlay-mcd6gm-0 leukzs"
    >
      <div
        class="Box-xda4ls-0 Card-sc-1moun4p-0 fnENSi"
      >
        <p
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
          Overlay content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Overlay Light (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="Text-sc-15glbbx-0 gSNEe"
      color="currentColor"
      font-size="medium"
    >
      Background content
    </p>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 Overlay-mcd6gm-0 frGXlz"
    >
      Overlay content
    </div>
  </div>
</div>
`;
